# Polygon

./: .gitignore  CMakeLists.txt  testQuad.cpp  test_convexpolygonintersect.cpp  test_cornercase.cpp  test_createpolygon.cpp  test_intersection.cpp
core/: functional_vector.cpp  functional_vector.h  polygon.cpp  polygon.h  polygon_intersecting.cpp  polygon_intersecting.h
test/: random_point_creator.h
